--- a/app/views/companies/_company.erb
+++ b/app/views/companies/_company.erb
@@ -1,6 +1,6 @@
 <div class="company_listing">
 
-	<h1><%= company.name %></h1
+	<a href="<%= company.url %>"><h1><%= company.name %></h1></a>
 		<p><%= company.address %> <%= company.phone_number %></p>
 
 </div>
